# VibeCoding

./: README.md  index.html  package.json  vite.config.ts
.cursor/rules/: non-specific-features.mdc  project-rule.mdc  project.mdc
dev-dist/: sw.js
habits-tgapp/: package.json
habits-tgapp/src/: App.tsx  index.css
hanzi-copybook/: deploy.sh  index.html  package.json
hanzi-copybook/scripts/: build-hanzi-data.ts
hanzi-copybook/src/: App.tsx  index.css  main.tsx
hanzi-mistaken-pairs-training/: index.html
hanzi-mistaken-pairs-training/dev-dist/: sw.js
hanzi-mistaken-pairs-training/src/: App.tsx
hanzi-text-complexity2/: package.json
hanzi-text-freq/: index.html
hanzifier-ext/: .tool-versions  bun.lockb  package.json
hanzifier-ext/config/: build.ts
hanzifier-ext/public/: manifest.json  options.html
hanzifier-ext/scripts/: prepare_dataset.py  requirements.txt
hanzifier-ext/src/: background.ts  contentScript.ts  utils.ts
life-calendar/: index.html  package.json
life-calendar/public/: manifest.json
life-calendar/src/: App.tsx
mingzhiboard/: .gitignore  Cargo.toml
mingzhiboard/.cursor/rules/: project.mdc
mingzhiboard/src/: app.rs  main.rs
mingzhiboard/src/core/: clipboard.rs  mod.rs  modes.rs
mingzhiboard/src/platform/: macos.rs  mod.rs  windows.rs
scripts/: generate-icons.js
src/: App.tsx  index.css  types.ts
src/assets/: pairs.json
stt-audioplayer/: .gitignore  deploy.sh  index.html  package.json  test-book.txt  vite.config.ts
unifersal-frequency-dict/: .gitignore  .tool-versions  index.html  vite.config.ts
(+9817 files in other folders)
